Fixed vertical overflow

--- a/carousel/css/style.css
+++ b/carousel/css/style.css
@@ -3,7 +3,7 @@
 
 body {
   background:#222228;
-  padding: 15px;
+  padding: 8px;
 }
 
 a {
@@ -13,13 +13,13 @@ a {
 }
 .arttitle {
   color: white;
-  font-family: "Lora";
+  font-family: "Lora", serif;
   text-align: center;
   margin-bottom: -10px;
 }
 .artauther {
   color: white;
-  font-family: "Lora";
+  font-family: "Lora", serif;
   text-align: center;
 }
 
